<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Newsletter</string>
    <string name="app_description">Free and Open Source project that allows you to read online news from America and the world.</string>
    <string name="home_label">Home</string>
    <string name="sources_label">Sources</string>
    <string name="search_label">Search</string>
    <string name="action_more">More</string>
    <string name="category_business">Business</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_general">General</string>
    <string name="category_health">Health</string>
    <string name="category_science">Science</string>
    <string name="category_sports">Sports</string>
    <string name="category_technology">Technology</string>
    <string name="category_unknown">Unknown category</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="licenses">Licenses</string>
    <string name="open_source_licenses">Open Source licenses</string>
    <string name="email">Email</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="action_share_app">Share app</string>
    <string name="share_app_preparing">Preparing APK, please wait…</string>
    <string name="no_result_title">No results</string>
    <string name="no_result_found_for_the_current_region_message">No results found for the current region</string>
    <string name="the_source_did_not_return_any_data">The Source did not return any data</string>
    <string name="no_matches_found">No matches found</string>
    <string name="network_error_title">Network error</string>
    <string name="network_error_message">Check your internet connection</string>
    <string name="sources_notice_title">About Sources</string>
    <string name="sources_notice_message">Sources are obtained based on the language of your region. Note that only sources verified as reliable are shown</string>
    <string name="retry">Retry</string>
    <string name="share_with">Share with</string>
    <string name="share_from_the_news_app">Share from the Newsletter app</string>
    <string name="action_share">Share</string>
    <string name="action_open_with_browser">Open with browser</string>
    <string name="action_open_web_page">Open Web page</string>
    <string name="cannot_load_news">Could not load news</string>
    <string name="cannot_load_news_message">It could be something temporary. However, if the problem persists, you should check your Internet connection</string>
    <string name="press_the_button_to_retry">Press the button to retry</string>
    <string name="developers_title">Developer</string>
    <string name="description_title">Description</string>
    <string name="powered_by_title">Powered by</string>
    <string name="action_add_exclusion">Add exclusion</string>
    <string name="exclude_domain_title">Exclude domain</string>
    <string name="edit_domain_title">Edit domain</string>
    <string name="this_domain_will_be_removed_from_exclusion">This domain will be removed from exclusion</string>
    <string name="domain_url">Domain URL</string>
    <string name="it_does_not_appear_to_be_a_valid_url">It does not appear to be a valid URL</string>
    <string name="excluded">Excluded</string>
    <string name="search_history_item_removed">Item removed from the history.</string>
    <string name="search_history_deleted">Search history deleted.</string>

    <string name="permissions_needed">Permissions needed</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="action_add">Add</string>
    <string name="action_grant">Grant</string>
    <string name="action_remove">Remove</string>
    <string name="action_clear">Clear</string>
    <string name="action_search">Search</string>
    <string name="search_latest_news">Search latest news</string>
    <string name="type_more_than_two_letters">¡You must type more than two letters!</string>
    <string name="browser_app_is_not_installed">Browser app is not installed</string>

    <string name="preference_category_appearance">Appearance</string>
    <string name="preference_category_news">News</string>
    <string name="preference_category_search">Search</string>
    <string name="preference_dark_theme_title">Dark theme</string>
    <string name="preference_dark_theme_summary">Enables the alternative dark theme</string>
    <string name="preference_accent_color_title">Accent color</string>
    <string name="preference_accent_color_summary">Choose your favorite accent color, red by default</string>
    <string name="preference_region_title">Region</string>
    <string name="preference_region_summary">If automatic detection is not accurate, select your region here</string>
    <string name="preference_news_update_interval_title">Update interval</string>
    <string name="preference_news_update_interval_summary">Every few hours the application should look for updated news</string>
    <string name="preference_results_limit_title">Results limit</string>
    <string name="preference_results_limit_summary">A very high number will increase loading time</string>
    <string name="preference_excluded_domains_title">Exclude domains</string>
    <string name="preference_excluded_domains_summary">Enter domains where news will not be searched</string>
    <string name="preference_open_news_in_app_title">Open news in this app</string>
    <string name="preference_open_news_in_app_summary">If disabled, news will be displayed in the default browser</string>
    <string name="preference_always_load_from_cache_if_possible_title">Always prefer cache</string>
    <string name="preference_always_load_from_cache_if_possible_summary">Whenever possible, load news from cache. It lets you save data</string>
    <string name="preference_search_on_text_changed_title">Search as you type</string>
    <string name="preference_search_on_text_changed_summary">If disabled, search only when you press Enter</string>
    <string name="preference_sort_search_result_by_title">Sort result by…</string>
    <string name="preference_delete_search_history_title">Delete search history</string>

    <string name="auto_detected">Auto detected</string>
    <string name="every_hour">Every hour</string>
    <string name="every_two_hours">Every 2 hours</string>
    <string name="every_five_hours">Every 5 hours</string>
    <string name="every_eight_hours">Every 8 hours</string>
    <string name="every_twelve_hours">Every 12 hours</string>
    <string name="every_twenty_four_hours">Every 24 hours</string>
    <string name="never">Never, update manually</string>
    <string name="ten_articles">10 articles</string>
    <string name="twenty_five_articles">25 articles</string>
    <string name="fifty_articles">50 articles</string>
    <string name="seventy_five_articles">75 articles</string>
    <string name="one_hundred_articles">100 articles</string>
    <string name="popularity">Source popularity</string>
    <string name="relevancy">Search relevancy</string>
    <string name="published_at">Published at</string>

    <string name="get_started">Get started</string>
    <string name="intro_welcome">Welcome, please, see what this application has for you…</string>
    <string name="intro_description_home">This section will show you the most recent news categorized in general, sports, health, etc..</string>
    <string name="intro_description_sources">Here you can review Sources that post news in your language</string>
    <string name="intro_description_search">Here you will have the possibility to search for news only on specific topics of your interest</string>
    <string name="intro_finishing_title">¡We are ready!</string>
    <string name="intro_finishing_description">Now you can start using our application, we hope you find it useful!</string>

    <string name="please_try_again">Please, try again</string>
    <string name="error_apiKeyDisabled">The application it\'s out of order</string>
    <string name="error_apiKeyExhausted">The application has reached its usage limit and it\'s out of order</string>
    <string name="error_parameterInvalid">An error occurred on our part. Some parameters are invalid</string>
    <string name="error_parametersMissing">An error occurred on our part. Some parameters are missing</string>
    <string name="error_rateLimited">We have reached our requests limit. Try again later</string>
    <string name="error_unexpectedError">An unexpected error occurred. Try again later</string>
    <string name="error_unknown">An unknown error occurred</string>
</resources>